# GraphiVault

./: .eslintrc.js  .gitignore  CONTRIBUTING.md  DATABASE_FIX.md  DEBUGGING_REPORT.md  DEBUG_COMMANDS.md  DEVELOPMENT.md  FIXES_COMPLETE.md  INTEGRATION_COMPLETE.md  LICENSE  README.md  SETUP_COMPLETE.md  TESTING_GUIDE.md  cleanup.bat  index.html  manage_packages.bat  package-lock.json  package.json  requirements.txt  setup.bat  status_check.bat  tailwind.config.js  theme-test.html  tsconfig.json  vite.config.ts
docs/: PROJECT_STRUCTURE.md  REORGANIZATION.md
python_backend/: README.md  __init__.py  audit_logger.py  config.json  decrypt.py  encrypt.py  image_processor.py  main.py  simple_test.py  test_backend.py  test_database_integration.py  thumbnail.py  vault_manager.py
python_backend/core/: core_engine.py  session_manager.py  vault_manager.py
python_backend/crypto/: crypto_controller.py
python_backend/database/: database_init.py  search_engine.py
python_backend/ipc/: ipc_gateway.py  ipc_gateway_old.py
python_backend/storage/: storage_interface.py
python_backend/ui/: image_processor.py
python_backend/utils/: tag_manager.py
src/: App.vue  main.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: commands.rs  database.rs  encryption.rs  main.rs
src/components/: FileUpload.vue  ImageCard.vue  PlatformIndicator.vue  ThemeToggle.vue  VaultUnlock.vue
src/router/: index.ts
src/stores/: theme.ts  vault.ts
src/types/: database.ts  tauri.ts
src/utils/: platform.ts  tauri.ts
test_vault/: vault.config  vault.key
(+17 files in other folders)
