[package]
name = "graphi-vault"
version = "0.1.0"
description = "A privacy-first, offline-first image vault and manager"
authors = ["Ziyanali Saiyed"]
license = "MIT"
repository = "https://github.com/ZiyanaliSaiyed/GraphiVault"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "fs-write-file", "path-all", "fs-read-dir", "fs-create-dir", "fs-exists", "dialog-save", "fs-remove-file", "fs-read-file", "shell-open", "fs-remove-dir", "dialog-open", "os-all", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
dirs = "5.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
